# salt

./: .gitignore  Cargo.toml  README.md  SALT.md  doc.html  release.sh
src/: main.rs
src/app/: doc.rs  interface.rs  mod.rs  parser.rs
src/watcher/: mod.rs
templates/: init.hbs  salt.hbs
