[package]
name = "salt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.5"
# clap = "2.33.3"
tokio = { version = "1.0" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
